--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,8 +1,4 @@
 PORT=5000
 NEWS_API_KEY=adebeab4c8a34f46a9b08f5bcf970007
-DB_USER=postgres
-DB_PASSWORD=asam@2005
-DB_NAME=news_app
-DB_HOST=localhost
-DB_PORT=5432
+DB_URL = postgresql://news_user:3C50ryEXUdplbWKkmet6eVur2SLy11De@dpg-d2g5l1buibrs73e0lbv0-a.singapore-postgres.render.com/news_db_to8i
 JWT_SECRET=jwt@2005
